--- a/backend/package.json
+++ b/backend/package.json
@@ -18,5 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1"
-  }
+  },
+  "keywords": [],
+  "type": "commonjs"
 }
